--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -31,7 +31,7 @@
 
   <%# Link and button to storefront %>
   <%%  if(storefront_path) {  %>
-  <a href="<%%- storefront_path %>" class="map-micello__overlay__cta btn btn--full btn--main js-pjax-link-stores js-touchlink">
+  <a href="<%%- storefront_path %>" class="map-micello__overlay__cta btn btn--full btn--main js-touchlink">
     <span class="icon icon--store icon--lrg icon--spacing-lrg" aria-hidden="true"></span>
     Store details
   </a>
