--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -400,11 +400,13 @@
 
 <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use the product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
 
-<div class="ng-cloak filters filters--pin-board js-disabled-hide">
+<% if @search.products.present? %>
+  <div class="ng-cloak filters filters--pin-board js-disabled-hide">
 
-  <!-- ProductBrowseView will be rendered within here -->
-  <div ng-view></div>
-</div>
+    <!-- ProductBrowseView will be rendered within here -->
+    <div ng-view></div>
+  </div>
+<%- end -%>
 
 <%# Render results %>
 <div ng-cloak ng-controller="ProductsController" aria-live="polite" aria-atomic="true">
